--- a/content/_includes/com301-nav.html
+++ b/content/_includes/com301-nav.html
@@ -30,7 +30,7 @@
     <a class="nav-link d-block disabled" href="week8.html">Week 8: Figma</a>
     <a class="nav-link d-block disabled" href="week9.html">Week 9: Spring Break</a>
     <a class="nav-link d-block" href="week10.html">Week 10: Mapping Shapes</a>
-    <a class="nav-link d-block disabled" href="week11.html">Week 11: Studio</a>
+    <a class="nav-link d-block" href="week11.html">Week 11: Choropleths</a>
     <a class="nav-link d-block disabled" href="week12.html">Week 12: Studio</a>
     <a class="nav-link d-block disabled" href="week13.html">Week 13: Studio</a>
     <a class="nav-link d-block disabled" href="week14.html">Week 14: Draft Presentations</a>
