added mixi mini

--- a/content/_includes/footer.html
+++ b/content/_includes/footer.html
@@ -12,7 +12,7 @@
 
             </div>
             <div class="col mb-2">
-                <a href="https://mixi.nyc"><img alt="mixi institute for stem and the imagination" src="{{site.baseurl}}/img/mixi.svg"
+                <a href="https://mixi.nyc"><img alt="mixi institute for stem and the imagination" src="{{site.baseurl}}/img/mixi.png"
                         style="height: 32px;" /></a>
             </div>
             <div class="col mb-2">
