--- a/content/_includes/maker3-nav.html
+++ b/content/_includes/maker3-nav.html
@@ -12,13 +12,13 @@
     <a class="nav-link text-white d-block" href="week5.html"><b><i class="bi bi-router"></i> Feb 20</b> Equity in the lab</a>
     <a class="nav-link text-white d-block" href="week6.html"><b><i class="bi bi-building"></i> Feb 27</b> Goldberg Demo Day</a>
     <a class="nav-link text-white d-block" href="week7.html"><b><i class="bi bi-router"></i> Mar 05</b> Equity in the lab</a>
-    <a class="nav-link text-white d-block" href="week8.html"><b><i class="bi bi-building"></i> Mar 12</b> Maker Learning Seminar</a>
-    <a class="nav-link text-white d-block" href="spring-break.html"><b><i class="bi bi-emoji-sunglasses"></i> Mar 19</b> Spring break, no class</a>
-    <a class="nav-link text-white d-block" href="week10.html"><b><i class="bi bi-building"></i> Mar 26</b> Workshop Pitches</a>
-    <a class="nav-link text-white d-block" href="week11.html"><b><i class="bi bi-router"></i> Apr 02</b> Workshop Pairs</a>
-    <a class="nav-link text-white d-block" href="week12.html"><b><i class="bi bi-building"></i> Apr 09</b> Workshop Abstract</a>
+    <a class="nav-link text-white d-block  disabled" href="week8.html"><b><i class="bi bi-building"></i> Mar 12</b> Maker Learning Seminar</a>
+    <a class="nav-link text-white d-block  disabled" href="spring-break.html"><b><i class="bi bi-emoji-sunglasses"></i> Mar 19</b> Spring break, no class</a>
+    <a class="nav-link text-white d-block  disabled" href="week10.html"><b><i class="bi bi-building"></i> Mar 26</b> Workshop Pitches</a>
+    <a class="nav-link text-white d-block  disabled" href="week11.html"><b><i class="bi bi-router"></i> Apr 02</b> Workshop Pairs</a>
+    <a class="nav-link text-white d-block  disabled" href="week12.html"><b><i class="bi bi-building"></i> Apr 09</b> Workshop Abstract</a>
     <a class="nav-link text-white d-block" href="week13.html"><b><i class="bi bi-router"></i> Apr 16</b> Workshop Lesson Plans</a>
-    <a class="nav-link text-white d-block" href="week14.html"><b><i class="bi bi-router"></i> Apr 23</b> Studio</a>
+    <a class="nav-link text-white d-block disabled" href="week14.html"><b><i class="bi bi-router"></i> Apr 23</b> Studio</a>
     <a class="nav-link text-white d-block disabled" href="week15.html"><b><i class="bi bi-building"></i> Apr 30</b> Studio</a>
     <a class="nav-link text-white d-block disabled" href="week16.html"><b><i class="bi bi-building"></i> May 07</b> Studio</a>
     <a class="nav-link text-white d-block" href="conference.html"><b><i class="bi bi-building"></i> May 14</b> Mini Conference</a>
