--- a/content/_includes/footer.html
+++ b/content/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer mt-auto py-3 bg-dark">
+<footer class="footer mt-auto py-3 bg-dark d-print-none">
     <div class="container">
         <div class="row d-flex align-items-end">
             <div class="col mb-2">
