--- a/content/_layouts/home.html
+++ b/content/_layouts/home.html
@@ -3,7 +3,7 @@ layout: base
 ---
 <style>
     .IndexHeader {
-        background-image: url('img/purple-pink.svg'); */
+        background-image: url('img/purple-pink.svg');
         background-size: cover;
         /* padding: 100px 0px; */
         /* background: blue; */
