--- a/content/css/main.css
+++ b/content/css/main.css
@@ -41,7 +41,7 @@ body, .font-sans-serif {
     font-size: 32px;
     font-weight: 900;
 }
-h1, h2, h3 {
+h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
 }
 .toc-link {
