added hex background to design

--- a/content/_includes/top-nav.html
+++ b/content/_includes/top-nav.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-row-reverse">
+<div class="d-flex flex-row-reverse" style="z-index: 10">
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
