added patch to sewing studio

--- a/content/_layouts/design.html
+++ b/content/_layouts/design.html
@@ -12,7 +12,7 @@ layout: base
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("/img/grid.png");
+  background-image: url("img/grid.png");
   background-repeat: repeat;
 }
 
@@ -23,7 +23,7 @@ layout: base
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("/img/grid.png");
+  background-image: url("img/grid.png");
   background-repeat: repeat;
   background-position-x: -10px;
   background-position-y: 17px;
