fixed header image in design layout

--- a/content/_layouts/design.html
+++ b/content/_layouts/design.html
@@ -98,7 +98,7 @@ img.header {
 <div class="hex2"></div>
 {% include top-nav.html %}
 <main class="Design container-fluid mx-auto mt-2">
-    <img src="{{page.header-img}}" alt="{{page.header-img-alt}}" class="header">
+    <img src="{{site.url}}/{{page.header-img}}" alt="{{page.header-img-alt}}" class="header">
     <div class="p-4">{{content}}</div>
     {% if page.syllabus_footer %}
     <hr>
