--- a/content/_layouts/design.html
+++ b/content/_layouts/design.html
@@ -102,7 +102,11 @@ img.header {
     <div class="p-4">{{content}}</div>
     {% if page.syllabus_footer %}
     <hr>
-    <div class="container mx-auto mt-4 pt-4">{% include syllabus-legal.html %}</div>
+    <div class="container mx-auto mt-4 pt-4">
+        {% md %}
+            {% include syllabus-legal.md %}
+        {% endmd %}
+    </div>
     {% endif %}
 </main>
 {% include footer.html %}
