tweaked syllabus template

--- a/content/_layouts/design.html
+++ b/content/_layouts/design.html
@@ -69,7 +69,7 @@ body {
 }
 
 .PageTitle {
-    font-size: 64px;
+    font-size: 40px;
     font-weight: 900;
 
 }
@@ -98,7 +98,7 @@ img.header {
 <div class="hex2"></div>
 {% include top-nav.html %}
 <main class="Design container-fluid mx-auto mt-2">
-    <img src="{{site.url}}/{{page.header-img}}" alt="{{page.header-img-alt}}" class="header">
+    <img src="{{site.url}}/{{page.header-img}}" alt="{{page.header-img-alt}}" class="header d-print-none">
     <div class="p-4">{{content}}</div>
     {% if page.syllabus_footer %}
     <hr>
