steam vs edtech

--- a/content/_includes/top-nav.html
+++ b/content/_includes/top-nav.html
@@ -9,6 +9,7 @@
                 <div class="navbar-nav">
                     <a class="nav-link" href="index.html">courses</a>
                     <a class="nav-link" href="plan-of-study.html">plan of study</a>
+                    <a class="nav-link" href="steam-or-edtech.html">STEAM or ed tech?</a>
                     <a class="nav-link" href="thesis.html">thesis</a>
                     <a class="nav-link" href="https://online.adelphi.edu/graduate-degrees/ma-education-technology/">more info</a>
                 </div>
